--- a/src/_templates/_layout/_header.pug
+++ b/src/_templates/_layout/_header.pug
@@ -1,1 +1,30 @@
 header
+	.container.h-100
+		a(href="index.html").logo
+			img.lazyload.blur-up(data-src="./assets/logo.png", alt="WEST-LAKES")
+		.row.no-gutters.ai-c.h-100
+			nav
+				ul
+					li.active
+						a(href="#") giới thiệu
+					li
+						a(href="#") vị trí và tiện ích
+					li
+						a(href="#") mặt bằng
+					li
+						a(href="#") chương trình bán hàng
+					li
+						a(href="#") hỗ trợ tài chính
+					li
+						a(href="#") tiến độ
+					li
+						a(href="#") thư viện
+			.language
+				ul
+					li.active
+						a(href="#") en
+					li
+						a(href="#") vn
+			.search
+				.icon
+					img.lazyload.blur-up(data-src="./assets/icons/search.png", alt="SEARCH")
