--- a/src/_templates/_layout/_layout.pug
+++ b/src/_templates/_layout/_layout.pug
@@ -8,25 +8,22 @@ html(lang="en")
 		meta(charset="UTF-8")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0, user-scalable=no")
 		meta(http-equiv="X-UA-Compatible", content="ie=edge")
+		link(href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet")
 		link(rel="stylesheet", href="./css/core.min.css")
 		link(rel="stylesheet", href="./css/main.min.css")
 	body
 		block loading
 		//- main content
 		block header
-			include _header.pug
+			include _header
 		block banner,breadcrumb
 		main
 			block main
 			#js-page-verify(class=bodyClass hidden)
+		block fixed-menu
+			include _fixed-menu
 		block footer
-			include _footer.pug
-		//- end main content
-		#go-top
-			img.svg(src="./assets/icons/gotop.svg")
-		//- include scripts
-		//- script(type="text/javascript", src='https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v3.3')
-		script(type="text/javascript", src="https://maps.googleapis.com/maps/api/js?&libraries=places&key=AIzaSyAq6ag0zUMblc-Wk5Z5S8KWkHpT3ak1LzI")
+			include _footer
 		script(type="text/javascript", src="./js/core.min.js")
 		script(type="text/javascript", src="./js/main.min.js")
 		block scripts
