--- a/src/index.pug
+++ b/src/index.pug
@@ -1,7 +1,7 @@
 extends _templates/_layout/_layout.pug
 
 block var
-	- let title = 'Page | Index';
+	- let title = 'West Lakes';
 	- let bodyClass = 'index-page';
 
 block loading
@@ -9,4 +9,9 @@ block loading
 block banner,breadcrumb
 block main
 	include _templates/index/i-1
+	include _templates/index/i-2
+	include _templates/index/i-3
+	include _templates/index/i-4
+	include _templates/index/i-5
+	include _templates/index/i-6
 block scripts
