--- a/src/scss/_globals/atomic.scss
+++ b/src/scss/_globals/atomic.scss
@@ -112,3 +112,15 @@
 .td-u {
 	text-decoration: underline;
 }
+
+.h-100 {
+	height: 100%;
+}
+
+.w-100 {
+	width: 100%;
+}
+
+.line-height--30px {
+	line-height: 30px;
+}
