--- a/src/scss/_globals/reset.scss
+++ b/src/scss/_globals/reset.scss
@@ -1,3 +1,20 @@
+::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 6px rgba(255, 255, 255, 0);
+	background-color: #fff;
+}
+
+::-webkit-scrollbar {
+	width: 0;
+	height: 0;
+	background-color: #fff;
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius: 2.5px;
+	box-shadow: inset 0 0 6px rgba(255, 255, 255, 0);
+	background-color: map-get($mau, main);
+}
+
 *,
 *::before,
 *::after {
@@ -11,11 +28,11 @@ html {
 
 body {
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 1.5;
-	color: #1c1c1c;
+	color: #000000;
 	background-color: #ffffff;
 }
 
