--- a/src/_templates/index/i-5.pug
+++ b/src/_templates/index/i-5.pug
@@ -1,5 +1,7 @@
-section.index-5(full-screen data-bg="../assets/images/background/index-5.png")
-	.container.h-100
+section.index-5
+	.map-index-5
+		img(src="./assets/images/background/index-5.png", alt="")
+	.container
 		.block-content(max-width='40%')
 			.content
 				h2 TIỆN ÍCH ĐẲNG CẤP 5 SAO
