--- a/src/_templates/index/i-6.pug
+++ b/src/_templates/index/i-6.pug
@@ -1,8 +1,20 @@
 section.index-6(data-bg="../assets/images/background/index-6.png")
-	.block-content.ta-c.mx-at(max-width='50%')
-		.content
-			.block-title
-				h2 MẶT BẰNG
-			.desc
-				p Biệt thự sân golf West Lakes Golf & Villas bao gồm 3 loại sản phẩm: Biệt thự mini, biệt thự đơn lập và biệt thự song lập. Các công trình đều được thiết kế và xây dựng theo phong cách đậm chất tân cổ điển, hiện đại trong kiến trúc và sang trọng về nội thất.
-	.map
+	.block-1
+		.container
+			.block-content.ta-c.mx-at(max-width='60%')
+				.content
+					.block-title
+						h2 CHƯƠNG TRÌNH BÁN HÀNG
+	.block-2(data-bg="../assets/images/background/index-7-block-2.png")
+		.container
+			.block-content.mx-at(max-width='1088px' bg-style="1")
+				.content.ta-c
+					.block-title.mx-at(max-width="600px")
+						h2 GIÁ TRỊ DỰ ÁN
+					.sub-title
+						h3 West Lakes Golf & Villas
+						p Quần thể biệt thự nghỉ dưỡng ven đô,
+							br
+							| ôm trọn sân Golf đầu tiên ở phía Tây Thành phố Hồ Chí Minh
+					.desc
+						p Phát triển dựa trên những quy chuẩn kiến trúc khắt khe của sân Golf West Lakes - một sản phẩm của đơn vị thiết kế Thomson Perrett hàng đầu thế giới, chỉ cách trung tâm Tp.HCM chỉ hơn 30km nhưng quy tụ các tiện ích nội khu 5 sao đáp ứng nhu cầu nghỉ dưỡng xanh cao cấp của gia đình hiện đại.
