--- a/src/_templates/index/i-5.pug
+++ b/src/_templates/index/i-5.pug
@@ -1,13 +1,18 @@
-section.index-5
+section.index-5(data-bg="../assets/images/background/index-5.png")
+	.block-content.ta-c.mx-at(max-width='50%')
+		.content
+			.block-title
+				h2 MẶT BẰNG
+			.desc
+				p Biệt thự sân golf West Lakes Golf & Villas bao gồm 3 loại sản phẩm: Biệt thự mini, biệt thự đơn lập và biệt thự song lập. Các công trình đều được thiết kế và xây dựng theo phong cách đậm chất tân cổ điển, hiện đại trong kiến trúc và sang trọng về nội thất.
 	.map-index-5
-		img(src="./assets/images/background/index-5.png", alt="")
-	.container
-		.block-content(max-width='40%')
-			.content
-				h2 TIỆN ÍCH ĐẲNG CẤP 5 SAO
-					br
-					| DÀNH CHO GIỚI THƯỢNG LƯU
-				.desc
-					ul
-						li Tại West Lakes Golf & Villas, chủ nhân trải nghiệm tiêu chuẩn sống xanh đầy đủ tiện nghi giữa lòng đô thị sân Golf hiện đại.
-						li Tổ hợp tiện ích nội khu được đầu tư và thiết kế đồng bộ luôn sẵn sàng phục vụ cộng đồng cư dân tinh hoa: Sân golf chuẩn quốc tế 27 lỗ, clubhouse hiện đại, công viên nước, trường học, bệnh viện quốc tế, spa thời thượng, phòng gym đẳng cấp…
+		.img
+			img(src="./assets/images/items/map-index-5.png", alt="")
+		.list-fixed-item
+			ul
+				li(data-bg-item="yellow").active
+					h5 Biệt thự mini - 1
+				li(data-bg-item="aqua")
+					h5 Biệt thự mini - 2
+				li(data-bg-item="pink")
+					h5 Biệt thự mini - 3
