--- a/src/scss/_globals/utilities.scss
+++ b/src/scss/_globals/utilities.scss
@@ -27,6 +27,10 @@ textarea {
 		overflow: hidden;
 	}
 
+	&[max-width="1088px"] {
+		max-width: 1088px;
+	}
+
 	&[max-width="845px"] {
 		max-width: 845px;
 	}
@@ -39,16 +43,20 @@ textarea {
 		max-width: 1280px;
 	}
 
+	&[max-width="75%"] {
+		max-width: 75%;
+	}
+
+	&[max-width="60%"] {
+		max-width: 60%;
+	}
+
 	&[max-width="50%"] {
 		max-width: 50%;
 	}
 
 	&[max-width="40%"] {
 		max-width: 40%;
-	}
-
-	&[center] {
-		margin: 0 auto;
 	}
 
 	&[right] {
