--- a/src/scss/pages/index/i-3.scss
+++ b/src/scss/pages/index/i-3.scss
@@ -1,3 +1,118 @@
-.index-3{
-	
+.index-3 {
+	position: relative;
+
+	.block-1 {
+		display: flex;
+		align-items: center;
+		position: relative;
+		min-height: 1055px;
+
+		.block-title {
+			margin-bottom: 80px;
+		}
+
+		.desc {
+			h3 {
+				color: map-get($mau, main-1);
+				font-size: 2.5rem;
+				text-transform: uppercase;
+				margin-bottom: 25px;
+			}
+
+			p {
+				color: #ffffff;
+				font-size: 1.25rem;
+			}
+
+			p+p {
+				margin-top: 10px;
+			}
+		}
+
+		.img-map {
+			position: absolute;
+			right: 0;
+			top: 50%;
+			transform: translateY(-50%);
+		}
+	}
+
+	.block-2 {
+		position: relative;
+		display: flex;
+		align-items: center;
+		min-height: 625px;
+
+		.block-content {
+			position: relative;
+			z-index: 2;
+		}
+
+		h3 {
+			font-size: 2.5rem;
+			color: map-get($mau, main-1);
+			margin-bottom: 30px;
+		}
+
+		ul {
+			display: flex;
+			flex-wrap: wrap;
+			color: #ffffff;
+
+			li {
+				-ms-flex: 0 0 100%;
+				-webkit-box-flex: 0;
+				flex: 0 0 50%;
+				max-width: 50%;
+				margin-bottom: 15px;
+			}
+		}
+
+		&:after {
+			content: '';
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+			background: linear-gradient(90deg, rgba(4, 54, 40, 0.9), #194b2a00);
+			z-index: 1;
+			opacity: .13;
+		}
+
+		.list-items-icon {
+			display: flex;
+			justify-content: center;
+			margin-top: 30px;
+
+			.item {
+				border-bottom: 1px solid #ffffff;
+				padding-bottom: 5px;
+			}
+
+			.item+.item {
+				margin-left: 130px;
+			}
+
+			.icon {
+				margin-bottom: 25px;
+				min-height: 90px;
+				overflow: hidden;
+
+				img {
+					display: block;
+					margin: 0 auto;
+				}
+			}
+
+			.text {
+				text-align: center;
+			}
+
+			p {
+				font-size: 1.25rem;
+				color: #ffffff;
+			}
+		}
+	}
 }
