--- a/src/scss/pages/index/i-5.scss
+++ b/src/scss/pages/index/i-5.scss
@@ -1,37 +1,109 @@
 .index-5 {
-	position: relative;
-	box-shadow: 5px 5px 10px rgba($color: #000000, $alpha: .5);
+	padding-top: 80px;
 
-	.container {
-		position: absolute;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		left: 50%;
-		transform: translateX(-50%);
-	}
-
-	.block-content {
-		position: absolute;
-		bottom: 20%;
-		left: 10px;
-
-		h2 {
-			font-size: 2.5rem;
-			color: map-get($mau, main-1);
-			margin-bottom: 30px;
+	.content {
+		.block-title {
+			width: 80%;
+			margin: 0 auto;
 		}
 
 		.desc {
-			ul {
-				li {
-					color: #ffffff;
-					font-size: 1.25rem;
+			margin-top: 40px;
+
+			p {
+				color: #ffffff;
+				font-size: 1.25rem;
+			}
+		}
+	}
+
+	.map-index-5 {
+		position: relative;
+		margin-top: 70px;
+	}
+
+	.list-fixed-item {
+		position: absolute;
+		left: 0;
+		top: 50%;
+		transform: translateY(-50%);
+
+		ul {
+			list-style-type: none;
+			padding-left: 0;
+			width: 100px;
+			background: map-get($mau, main-1);
+
+			li {
+				cursor: pointer;
+				position: relative;
+				width: 100%;
+				height: 150px;
+				background: #E2CE92;
+
+				&.active {
+					background: #C9A755;
 				}
 
-				li+li {
-					margin-top: 20px;
+				&:after {
+					content: '';
+					position: absolute;
+					top: 50%;
+					left: 50%;
+					transform: translate(-50%, -50%);
+					width: 30px;
+					height: 95px;
+					border-radius: 5px;
+					background: map-get($mau, main);
 				}
+
+				&[data-bg-item="yellow"] {
+					&:after {
+						background: #FBDD0F;
+					}
+				}
+
+				&[data-bg-item="aqua"] {
+					&:after {
+						background: #38E2ED;
+					}
+				}
+
+				&[data-bg-item="pink"] {
+					&:after {
+						background: #E5ADA6;
+					}
+				}
+
+				h5 {
+					position: absolute;
+					left: 100%;
+					top: 0;
+					height: 100%;
+					width: 350px;
+					display: flex;
+					align-items: center;
+					padding-left: 45px;
+					background: linear-gradient(90deg, #D5B85F, rgba(0, 0, 0, 0));
+					text-transform: uppercase;
+					color: #ffffff;
+					font-size: 1.5625rem;
+					user-select: none;
+					transform: translateX(-100%);
+					transition: .3s all ease;
+				}
+
+				@media (min-width: 1025px) {
+					&:hover {
+						h5 {
+							transform: translateX(0);
+						}
+					}
+				}
+			}
+
+			li+li {
+				margin-top: 5px;
 			}
 		}
 	}
