--- a/src/_templates/index/i-5.pug
+++ b/src/_templates/index/i-5.pug
@@ -1,13 +1,44 @@
 section.index-5
 	.map-index-5
-		img(src="./assets/images/background/index-5.png", alt="")
-	.container
-		.block-content(max-width='40%')
-			.content
-				h2 TIỆN ÍCH ĐẲNG CẤP 5 SAO
-					br
-					| DÀNH CHO GIỚI THƯỢNG LƯU
-				.desc
-					ul
-						li Tại West Lakes Golf & Villas, chủ nhân trải nghiệm tiêu chuẩn sống xanh đầy đủ tiện nghi giữa lòng đô thị sân Golf hiện đại.
-						li Tổ hợp tiện ích nội khu được đầu tư và thiết kế đồng bộ luôn sẵn sàng phục vụ cộng đồng cư dân tinh hoa: Sân golf chuẩn quốc tế 27 lỗ, clubhouse hiện đại, công viên nước, trường học, bệnh viện quốc tế, spa thời thượng, phòng gym đẳng cấp…
+		.map-wrapper
+			<img src="./assets/images/background/index-5.png" id="map-image" style="width: 1920px; max-width: 100%; height: auto;" alt="" usemap="#projectmap" />
+			<map name="projectmap" class="image-map">
+				<area shape="circle" coords="1058, 405, 36" title="1" />
+				.dialog.dialog-1
+					.dialog-wrapper
+						h2 Sân golf chuẩn quốc tế
+				<area shape="circle" coords="1145, 568, 37" title="2" />
+				.dialog.dialog-2
+					.dialog-wrapper
+						h2 Sân golf chuẩn quốc tế
+				<area shape="circle" coords="1628, 245, 37" title="7" />
+				.dialog.dialog-7
+					.dialog-wrapper
+						h2 Sân golf chuẩn quốc tế
+				<area shape="circle" coords="1553, 334, 37" title="6" />
+				.dialog.dialog-6
+					.dialog-wrapper
+						h2 Sân golf chuẩn quốc tế
+				<area shape="circle" coords="1705, 359, 35" title="5" />
+				.dialog.dialog-5
+					.dialog-wrapper
+						h2 Sân golf chuẩn quốc tế
+				<area shape="circle" coords="1636, 496, 36" title="4" />
+				.dialog.dialog-4
+					.dialog-wrapper
+						h2 Sân golf chuẩn quốc tế
+				<area shape="circle" coords="1518, 587, 36" title="3" />
+				.dialog.dialog-3
+					.dialog-wrapper
+						h2 Sân golf chuẩn quốc tế
+			</map>
+	//- .container
+	//- 	.block-content(max-width='40%')
+	//- 		.content
+	//- 			h2 TIỆN ÍCH ĐẲNG CẤP 5 SAO
+	//- 				br
+	//- 				| DÀNH CHO GIỚI THƯỢNG LƯU
+	//- 			.desc
+	//- 				ul
+	//- 					li Tại West Lakes Golf & Villas, chủ nhân trải nghiệm tiêu chuẩn sống xanh đầy đủ tiện nghi giữa lòng đô thị sân Golf hiện đại.
+	//- 					li Tổ hợp tiện ích nội khu được đầu tư và thiết kế đồng bộ luôn sẵn sàng phục vụ cộng đồng cư dân tinh hoa: Sân golf chuẩn quốc tế 27 lỗ, clubhouse hiện đại, công viên nước, trường học, bệnh viện quốc tế, spa thời thượng, phòng gym đẳng cấp…
