update i4, css task

--- a/src/_templates/index/i-4.pug
+++ b/src/_templates/index/i-4.pug
@@ -1,44 +1,174 @@
 section.index-4
+	.map-index-4-slider-wrapper
+		.map-index-4-slider-custom
+			.map-index-4-slider-1.map-index-4-slider
+				.content
+					.number 01
+					.title Sân golf chuẩn quốc tế 27 lỗ
+					.text Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.
+				.swiper-container
+					.swiper-wrapper
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+			.map-index-4-slider-2.map-index-4-slider
+				.content
+					.number 01
+					.title Sân golf chuẩn quốc tế 27 lỗ
+					.text Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.
+				.swiper-container
+					.swiper-wrapper
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+			.map-index-4-slider-3.map-index-4-slider
+				.content
+					.number 01
+					.title Sân golf chuẩn quốc tế 27 lỗ
+					.text Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.
+				.swiper-container
+					.swiper-wrapper
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/imag	es/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+			.map-index-4-slider-4.map-index-4-slider
+				.content
+					.number 01
+					.title Sân golf chuẩn quốc tế 27 lỗ
+					.text Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.
+				.swiper-container
+					.swiper-wrapper
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+			.map-index-4-slider-5.map-index-4-slider
+				.content
+					.number 01
+					.title Sân golf chuẩn quốc tế 27 lỗ
+					.text Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.
+				.swiper-container
+					.swiper-wrapper
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+			.map-index-4-slider-6.map-index-4-slider
+				.content
+					.number 01
+					.title Sân golf chuẩn quốc tế 27 lỗ
+					.text Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.
+				.swiper-container
+					.swiper-wrapper
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+			.map-index-4-slider-7.map-index-4-slider
+				.content
+					.number 01
+					.title Sân golf chuẩn quốc tế 27 lỗ
+					.text Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled scrambled it to make a type specimen book.
+				.swiper-container
+					.swiper-wrapper
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+						.swiper-slide
+							img(src="./assets/images/background/index-4-1.jpg", alt="")
+		
+		.map-index-4-slider-controls
+			.map-index-4-slider-close
+				<svg xmlns="http://www.w3.org/2000/svg" width="10" height="21" viewBox="0 0 10 21"><text transform="translate(0 17)" fill="#fff" font-size="16" font-family="Roboto-Light, Roboto" font-weight="300"><tspan x="0" y="0">X</tspan></text></svg>
+			.map-index-4-slider-prev
+				<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.364" viewBox="0 0 8.578 17.364"><path d="M7.2,0,0,7.975l7.371,7.975" transform="translate(0.5 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
+			.map-index-4-slider-next
+				<svg xmlns="http://www.w3.org/2000/svg" width="8.578" height="17.363" viewBox="0 0 8.578 17.363"><path d="M.171,0l7.2,7.975L0,15.951" transform="translate(0.707 0.706)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
 	.map-index-4
 		.map-wrapper
-			<img src="./assets/images/background/index-5.png" id="map-image" style="width: 1920px; max-width: 100%; height: auto;" alt="" usemap="#projectmap" />
+			<img src="./assets/images/background/index-4.png" id="map-image" style="width: 1920px; max-width: 100%; height: auto;" alt="" usemap="#projectmap" />
 			<map name="projectmap" class="image-map">
-				<area shape="circle" coords="1058, 405, 36" title="1" />
+				<area shape="circle" coords="1065,410,40" href="#" area-target="1" />
+				<area shape="circle" coords="1154,571,40" href="#" area-target="2" />
+				<area shape="circle" coords="1530,590,40" href="#" area-target="3" />
+				<area shape="circle" coords="1650,500,40" href="#" area-target="4" />
+				<area shape="circle" coords="1720,362,40" href="#" area-target="5" />
+				<area shape="circle" coords="1565,337,40" href="#" area-target="6" />
+				<area shape="circle" coords="1642,247,40" href="#" area-target="7" />
+			</map>
+			.map-dialog
 				.dialog.dialog-1
 					.dialog-wrapper
-						h2 Sân golf chuẩn quốc tế
-				<area shape="circle" coords="1145, 568, 37" title="2" />
+						h2 Sân golf chuẩn quốc tế 1
 				.dialog.dialog-2
 					.dialog-wrapper
-						h2 Sân golf chuẩn quốc tế
-				<area shape="circle" coords="1628, 245, 37" title="7" />
-				.dialog.dialog-7
-					.dialog-wrapper
-						h2 Sân golf chuẩn quốc tế
-				<area shape="circle" coords="1553, 334, 37" title="6" />
-				.dialog.dialog-6
-					.dialog-wrapper
-						h2 Sân golf chuẩn quốc tế
-				<area shape="circle" coords="1705, 359, 35" title="5" />
-				.dialog.dialog-5
-					.dialog-wrapper
-						h2 Sân golf chuẩn quốc tế
-				<area shape="circle" coords="1636, 496, 36" title="4" />
-				.dialog.dialog-4
-					.dialog-wrapper
-						h2 Sân golf chuẩn quốc tế
-				<area shape="circle" coords="1518, 587, 36" title="3" />
+						h2 Sân golf chuẩn quốc tế 2
 				.dialog.dialog-3
 					.dialog-wrapper
-						h2 Sân golf chuẩn quốc tế
-			</map>
-	.container
-		.block-content(max-width='40%')
-			.content
-				h2 TIỆN ÍCH ĐẲNG CẤP 5 SAO
-					br
-					| DÀNH CHO GIỚI THƯỢNG LƯU
-				.desc
-					ul
-						li Tại West Lakes Golf & Villas, chủ nhân trải nghiệm tiêu chuẩn sống xanh đầy đủ tiện nghi giữa lòng đô thị sân Golf hiện đại.
-						li Tổ hợp tiện ích nội khu được đầu tư và thiết kế đồng bộ luôn sẵn sàng phục vụ cộng đồng cư dân tinh hoa: Sân golf chuẩn quốc tế 27 lỗ, clubhouse hiện đại, công viên nước, trường học, bệnh viện quốc tế, spa thời thượng, phòng gym đẳng cấp…
+						h2 Sân golf chuẩn quốc tế 3
+				.dialog.dialog-4
+					.dialog-wrapper
+						h2 Sân golf chuẩn quốc tế 4
+				.dialog.dialog-5
+					.dialog-wrapper
+						h2 Sân golf chuẩn quốc tế 5
+				.dialog.dialog-6
+					.dialog-wrapper
+						h2 Sân golf chuẩn quốc tế 6
+				.dialog.dialog-7
+					.dialog-wrapper
+						h2 Sân golf chuẩn quốc tế 7
+		.container.map-index-4-container
+			.block-content(max-width='40%')
+				.content
+					h2 TIỆN ÍCH ĐẲNG CẤP 5 SAO
+						br
+						| DÀNH CHO GIỚI THƯỢNG LƯU
+					.desc
+						ul
+							li Tại West Lakes Golf & Villas, chủ nhân trải nghiệm tiêu chuẩn sống xanh đầy đủ tiện nghi giữa lòng đô thị sân Golf hiện đại.
+							li Tổ hợp tiện ích nội khu được đầu tư và thiết kế đồng bộ luôn sẵn sàng phục vụ cộng đồng cư dân tinh hoa: Sân golf chuẩn quốc tế 27 lỗ, clubhouse hiện đại, công viên nước, trường học, bệnh viện quốc tế, spa thời thượng, phòng gym đẳng cấp…
