--- a/src/scss/pages/index/i-4.scss
+++ b/src/scss/pages/index/i-4.scss
@@ -1,6 +1,6 @@
 .index-4 {
 	position: relative;
-	box-shadow: 5px 5px 10px rgba($color: #000000, $alpha: .5);
+	box-shadow: 5px 5px 10px rgba($color: #000000, $alpha: 0.5);
 
 	.container {
 		position: absolute;
@@ -10,6 +10,10 @@
 		left: 50%;
 		transform: translateX(-50%);
 	}
+	.map-index-4-container {
+		pointer-events: none;
+		transition: all 0.5s linear;
+	}
 
 	.block-content {
 		position: absolute;
@@ -17,21 +21,229 @@
 		left: 10px;
 
 		h2 {
-			font-size: 2.5rem;
 			color: map-get($mau, main-1);
 			margin-bottom: 30px;
+			font-size: 1.5rem;
+			@media (min-width: 1200px) {
+				font-size: 2rem;
+			}
+			@media (min-width: 1440px) {
+				font-size: 2.5rem;
+			}
 		}
 
 		.desc {
 			ul {
 				li {
 					color: #ffffff;
-					font-size: 1.25rem;
+					font-size: 1rem;
+					@media (min-width: 1200px) {
+						font-size: 1.1rem;
+					}
+					@media (min-width: 1440px) {
+						font-size: 1.25rem;
+					}
 				}
 
-				li+li {
+				li + li {
 					margin-top: 20px;
 				}
+			}
+		}
+	}
+	.map-wrapper {
+		position: relative;
+	}
+	.map-dialog {
+		position: absolute;
+		pointer-events: none;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+	.map-index-4 {
+		transition: all 0.5s linear;
+		&.pull-right {
+			transform: translateX(50%);
+			.map-index-4-container {
+				opacity: 0;
+			}
+		}
+	}
+	.map-index-4-slider-wrapper {
+		z-index: 2;
+		position: absolute;
+		top: 0;
+		left: 0;
+		height: 100%;
+		overflow: hidden;
+		transform: translateX(-100%);
+		transition: all 0.5s linear;
+		width: 100%;
+		.map-index-4-slider-custom {
+			background-color: white;
+			height: 100%;
+		}
+		.map-index-4-slider {
+			display: none;
+			height: 100%;
+			position: relative;
+			.content {
+				position: absolute;
+				z-index: 2;
+				bottom: 0;
+				left: 0;
+				width: 100%;
+				padding: 30px;
+				background-image: url('../assets/images/background/bg-1.png');
+				background-size: 100% 100%;
+				background-repeat: no-repeat;
+				display: flex;
+			}
+			.swiper-container {
+				height: 100%;
+			}
+			.swiper-slide {
+				img {
+					object-fit: cover;
+					width: 100%;
+					height: 100%;
+				}
+			}
+			&.active {
+				display: block;
+			}
+		}
+
+		@media (min-width: 1025px) {
+			padding-right: 250px;
+		}
+		@media (min-width: 1200px) {
+			padding-right: 350px;
+		}
+		@media (min-width: 1440px) {
+			padding-right: 450px;
+		}
+		@media (min-width: 1600px) {
+			padding-right: 535px;
+		}
+		&.pull-right {
+			transform: translateX(0);
+		}
+	}
+
+	.map-index-4-slider-controls {
+		position: absolute;
+		right: 0;
+		bottom: 0;
+		padding-bottom: 70px;
+		display: flex;
+		justify-content: center;
+		.map-index-4-slider-close,
+		.map-index-4-slider-prev,
+		.map-index-4-slider-next {
+			width: 40px;
+			height: 40px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			cursor: pointer;
+			&:disabled {
+				opacity: 0.75;
+			}
+		}
+		.map-index-4-slider-close {
+			margin-right: 20px;
+			background-color: rgba(#dcc375, 0.4);
+			border-radius: 7px;
+		}
+		.map-index-4-slider-prev {
+			background-color: rgba(#dcc375, 0.75);
+			border-top-left-radius: 7px;
+			border-bottom-left-radius: 7px;
+		}
+		.map-index-4-slider-next {
+			background-color: rgba(#dcc375, 0.75);
+			border-top-right-radius: 7px;
+			border-bottom-right-radius: 7px;
+		}
+		@media (min-width: 1025px) {
+			width: 250px;
+		}
+		@media (min-width: 1200px) {
+			width: 350px;
+		}
+		@media (min-width: 1440px) {
+			width: 450px;
+		}
+		@media (min-width: 1600px) {
+			width: 535px;
+		}
+	}
+}
+
+.dialog {
+	display: none;
+	.dialog-wrapper {
+		position: relative;
+		display: inline-flex;
+		align-items: center;
+		border-radius: 24px;
+		padding: 0 10px;
+		min-height: 48px;
+		background: linear-gradient(
+			306deg,
+			rgba(213, 184, 95, 1) 36%,
+			rgba(227, 227, 227, 1) 100%
+		);
+		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#d5b85f",endColorstr="#e3e3e3",GradientType=1);
+		&:before {
+			content: '';
+			position: absolute;
+			top: 100%;
+			border-left: 9px solid transparent;
+			border-right: 9px solid transparent;
+			border-top: 17px solid #d5b85f;
+		}
+		@media (min-width: 1200px) {
+			border-radius: 25px;
+			padding: 0 18px;
+			min-height: 60px;
+		}
+		@media (min-width: 1440px) {
+			border-radius: 37px;
+			padding: 0 25px;
+			min-height: 77px;
+		}
+	}
+	h2 {
+		color: white;
+		text-align: center;
+		text-transform: uppercase;
+		white-space: nowrap;
+		font-size: 16px;
+		@media (min-width: 1200px) {
+			font-size: 21px;
+		}
+		@media (min-width: 1440px) {
+			font-size: 25px;
+		}
+	}
+	&.center {
+		transform: translateX(-50%);
+		.dialog-wrapper {
+			&:before {
+				left: 50%;
+				transform: translateX(-50%);
+			}
+		}
+	}
+
+	&.right {
+		.dialog-wrapper {
+			&:before {
+				right: 52px;
 			}
 		}
 	}
