come to section-10

--- a/src/_templates/index/i-6.pug
+++ b/src/_templates/index/i-6.pug
@@ -5,16 +5,42 @@ section.index-6(data-bg="../assets/images/background/index-6.png")
 				.content
 					.block-title
 						h2 CHƯƠNG TRÌNH BÁN HÀNG
-	.block-2(data-bg="../assets/images/background/index-7-block-2.png")
-		.container
-			.block-content.mx-at(max-width='1088px' bg-style="1")
+	.block-2(full-screen data-bg="../assets/images/background/index-6-block-2.png")
+		.container.h-100
+			.block-content.h-100.mx-at(max-width='1088px' bg-style="1")
 				.content.ta-c
-					.block-title.mx-at(max-width="600px")
-						h2 GIÁ TRỊ DỰ ÁN
-					.sub-title
-						h3 West Lakes Golf & Villas
-						p Quần thể biệt thự nghỉ dưỡng ven đô,
-							br
-							| ôm trọn sân Golf đầu tiên ở phía Tây Thành phố Hồ Chí Minh
-					.desc
-						p Phát triển dựa trên những quy chuẩn kiến trúc khắt khe của sân Golf West Lakes - một sản phẩm của đơn vị thiết kế Thomson Perrett hàng đầu thế giới, chỉ cách trung tâm Tp.HCM chỉ hơn 30km nhưng quy tụ các tiện ích nội khu 5 sao đáp ứng nhu cầu nghỉ dưỡng xanh cao cấp của gia đình hiện đại.
+					.price
+						h4 giá công khai chỉ từ
+						h3 2.850.000.000 VNĐ
+						p Chỉ cần thanh toán 15% bạn đã sở hữu ngay căn biệt thự view sân Golf đẳng cấp liền kề Tp Hồ Chí Minh.
+					.prioritize.mx-at(max-width='80%')
+						h3 Tối ưu chính sách thanh toán và chiết khấu cao:
+						ul
+							li
+								.icon
+									img(src="./assets/icons/icon-index-6__1.png", alt="")
+								.text
+									p Chính sách thanh toán theo tiến độ trong vòng 24 tháng
+							li
+								.icon
+									img(src="./assets/icons/icon-index-6__2.png", alt="")
+								.text
+									p Chính sách thanh toán sớm
+					.sale
+						h3 Khuyến mãi có một không hai:
+						ul
+							li
+								.icon
+									img(src="./assets/icons/icon-index-6__3.png", alt="")
+								.text
+									p Chiết khấu ngay 5% giá trị căn biệt thự
+							li
+								.icon
+									img(src="./assets/icons/icon-index-6__4.png", alt="")
+								.text
+									p Hỗ trợ hoàn thiện nhà lên đến 150TR đồng
+							li
+								.icon
+									img(src="./assets/icons/icon-index-6__5.png", alt="")
+								.text
+									p Tặng ngay 1 cây vàng SJC trị giá lên đến 50TR
