--- a/src/index.pug
+++ b/src/index.pug
@@ -14,4 +14,9 @@ block main
 	include _templates/index/i-4
 	include _templates/index/i-5
 	include _templates/index/i-6
+	include _templates/index/i-7
+	include _templates/index/i-8
+	section.last-index(data-bg="../assets/images/background/last-index.png")
+		include _templates/index/i-9
+		include _templates/index/i-10
 block scripts
