--- a/src/scss/pages/index/i-3.scss
+++ b/src/scss/pages/index/i-3.scss
@@ -1,5 +1,9 @@
 .index-3 {
 	position: relative;
+	width: 100%;
+	height: 100%;
+	background-position: center;
+	background-size: cover;
 
 	.block-1 {
 		display: flex;
