--- a/src/scss/pages/index/i-5.scss
+++ b/src/scss/pages/index/i-5.scss
@@ -1,5 +1,9 @@
 .index-5 {
 	padding-top: 80px;
+	width: 100%;
+	height: 100%;
+	background-position: center;
+	background-size: cover;
 
 	.content {
 		.block-title {
