--- a/src/scss/pages/index/i-6.scss
+++ b/src/scss/pages/index/i-6.scss
@@ -1,7 +1,153 @@
 .index-6 {
+	background: #dfdfdf;
+	width: 100%;
+	height: 100%;
+	background-position: center;
+	background-size: cover;
+
 	.block-1 {
 		.block-content {
 			padding: 85px 0;
+		}
+	}
+
+	.block-2 {
+		box-shadow: 0 5px 10px rgba($color: #000000, $alpha: .5);
+
+		.block-content {
+			position: relative;
+
+			.content {
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				z-index: 1;
+				width: 80%;
+			}
+
+			&[bg-style="1"] {
+
+				&::after,
+				&::before {
+					content: '';
+					position: absolute;
+					left: 0;
+					width: 100%;
+					height: 70%;
+				}
+
+				&::after {
+					top: 0;
+					background: linear-gradient(180deg, #054B37, #22643900);
+				}
+
+				&::before {
+					bottom: 0;
+					background: linear-gradient(180deg, #22643900, #054B37);
+				}
+			}
+		}
+
+		.price {
+			h4 {
+				font-size: 1.5625rem;
+				color: #ffffff;
+				text-transform: uppercase;
+			}
+
+			h3 {
+				font-size: 3.125rem;
+				color: map-get($mau, main-1);
+				text-shadow: 0 3px 6px rgba($color: #000000, $alpha: .78);
+			}
+
+			p {
+				color: #ffffff;
+				font-size: 1.25rem;
+			}
+		}
+
+		.prioritize {
+			margin-top: 25px;
+
+			h3 {
+				font-size: 1.5625rem;
+				color: #ffffff;
+				text-transform: uppercase;
+			}
+
+			ul {
+				margin-top: 40px;
+				display: flex;
+				flex-wrap: wrap;
+				list-style-type: none;
+				padding-left: 0;
+
+				li {
+					-ms-flex: 0 0 50%;
+					flex: 0 0 50%;
+					max-width: 50%;
+
+					.icon {
+						margin-bottom: 10px;
+						height: 95px;
+						overflow: hidden;
+					}
+
+					.text {
+						p {
+							font-size: 1.25rem;
+							color: #ffffff;
+						}
+					}
+				}
+
+				li+li {
+					padding-left: 15px;
+				}
+			}
+		}
+
+		.sale {
+			margin-top: 60px;
+
+			h3 {
+				font-size: 1.5625rem;
+				color: #ffffff;
+				text-transform: uppercase;
+			}
+
+			ul {
+				margin-top: 40px;
+				display: flex;
+				flex-wrap: wrap;
+				list-style-type: none;
+				padding-left: 0;
+
+				li {
+					-ms-flex: 0 0 33.3333%;
+					flex: 0 0 33.3333%;
+					max-width: 33.3333%;
+
+					.icon {
+						margin-bottom: 10px;
+						height: 95px;
+						overflow: hidden;
+					}
+
+					.text {
+						p {
+							font-size: 1.25rem;
+							color: #ffffff;
+						}
+					}
+				}
+
+				li+li {
+					padding-left: 15px;
+				}
+			}
 		}
 	}
 }
