--- a/src/_templates/index/i-10.pug
+++ b/src/_templates/index/i-10.pug
@@ -1,3 +1,68 @@
 section.index-10
 	.container
-		.block-content.mx-at(max-width='1036px')
+		.block-1.mx-at(max-width='1360px')
+			.row
+				.col-lg-6
+					.block-content.mx-at
+						.content.ta-c
+							.block-title.mx-at(max-width='75%')
+								h2 CHỦ ĐẦU TƯ
+							.desc
+								p Với kinh nghiệm quý báu suốt 12 năm hình thành và phát triển, theo đó là sự thấu hiểu sâu sắc thị hiếu khách hàng, Trần Anh Group tự hào đem đến những sản phẩm xứng tầm uy tín của một trong những chủ đầu tư bất động sản hàng đầu tại tỉnh Long An.
+								p Với West Lakes Golf & Villas, Trần Anh Group khẳng định tài năng và tinh thần của những nhà kiến tạo đầy tâm huyết.
+				.col-lg-6
+					.review-video
+						.block-video
+							.youtube-api(data-url="https://www.youtube.com/watch?v=_jQSP0y32Rk&feature=emb_title")
+						.content(data-bg="../assets/images/background/text-review-video.png")
+							h3 Lorem ipsum dolor sit amet
+							p Lorem ipsum dolor sit amet, consectetuer adipiscing eli.
+		.block-2
+			.slider-thumnail-video
+				.swiper-container
+					.swiper-wrapper
+						.swiper-slide
+							.item.active
+								.img.ov-h
+									img.ofcv(src="./assets/images/items/index-9__1.png", alt="")
+								.text(data-bg="../assets/images/background/item_index-9.png")
+									h3.lcl.lcl-1 Lorem ipsum dolor
+									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
+						.swiper-slide
+							.item
+								.img.ov-h
+									img.ofcv(src="./assets/images/items/index-9__2.png", alt="")
+								.text(data-bg="../assets/images/background/item_index-9.png")
+									h3.lcl.lcl-1 Lorem ipsum dolor
+									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
+						.swiper-slide
+							.item
+								.img.ov-h
+									img.ofcv(src="./assets/images/items/index-9__3.png", alt="")
+								.text(data-bg="../assets/images/background/item_index-9.png")
+									h3.lcl.lcl-1 Lorem ipsum dolor
+									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
+						.swiper-slide
+							.item
+								.img.ov-h
+									img.ofcv(src="./assets/images/items/index-9__1.png", alt="")
+								.text(data-bg="../assets/images/background/item_index-9.png")
+									h3.lcl.lcl-1 Lorem ipsum dolor
+									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
+						.swiper-slide
+							.item
+								.img.ov-h
+									img.ofcv(src="./assets/images/items/index-9__2.png", alt="")
+								.text(data-bg="../assets/images/background/item_index-9.png")
+									h3.lcl.lcl-1 Lorem ipsum dolor
+									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
+						.swiper-slide
+							.item
+								.img.ov-h
+									img.ofcv(src="./assets/images/items/index-9__3.png", alt="")
+								.text(data-bg="../assets/images/background/item_index-9.png")
+									h3.lcl.lcl-1 Lorem ipsum dolor
+									.date(data-bg="../assets/images/background/item-date-index-9.png") 28/05/20
+				.list-btn
+					.item.swiper-button-prev
+					.item.swiper-button-next
