--- a/src/index.pug
+++ b/src/index.pug
@@ -20,3 +20,4 @@ block main
 		include _templates/index/i-9
 		include _templates/index/i-10
 block scripts
+	script(src="./js/YoutubeController.min.js")
