--- a/src/_templates/index/i-8.pug
+++ b/src/_templates/index/i-8.pug
@@ -1,6 +1,6 @@
 section.index-8(data-bg="../assets/images/background/index-8.png")
 	.container
-		.block-content.mx-at(max-width='80%')
+		.block-content.mx-at(max-width='1360px')
 			.content.ta-c
 				.block-title.mx-at(max-width="600px")
 					h2 HỖ TRỢ TÀI CHÍNH
