--- a/src/scss/_globals/utilities.scss
+++ b/src/scss/_globals/utilities.scss
@@ -31,6 +31,10 @@ textarea {
 		max-width: 1036px;
 	}
 
+	&[max-width="1360px"] {
+		max-width: 1360px;
+	}
+
 	&[max-width="1088px"] {
 		max-width: 1088px;
 	}
