--- a/src/_templates/index/i-10.pug
+++ b/src/_templates/index/i-10.pug
@@ -1,6 +1,6 @@
 section.index-10
-	.container
-		.block-1.mx-at(max-width='1360px')
+	.container(max-width="1360px")
+		.block-1.mx-at
 			.row
 				.col-lg-6
 					.block-content.mx-at
