--- a/src/index.pug
+++ b/src/index.pug
@@ -19,5 +19,6 @@ block main
 	section.last-index(data-bg="../assets/images/background/last-index.png")
 		include _templates/index/i-9
 		include _templates/index/i-10
+		include _templates/index/i-11
 block scripts
 	script(src="./js/YoutubeController.min.js")
