--- a/src/scss/_globals/utilities.scss
+++ b/src/scss/_globals/utilities.scss
@@ -213,6 +213,15 @@ main {
 		}
 	}
 
+	&[no-after] {
+		border: 0;
+
+		&::after,
+		&::before {
+			content: none;
+		}
+	}
+
 	&:after,
 	&:before {
 		content: '';
