--- a/src/_templates/index/i-2.pug
+++ b/src/_templates/index/i-2.pug
@@ -4,12 +4,12 @@ section.index-2(full-screen)
 			.swiper-wrapper.w-100.h-100
 				.swiper-slide
 					.section(data-bg="../assets/images/background/index-2.1.png")
-						.block-content.mx-at(max-width='845px' bg-style="1")
+						.block-content.mx-at(max-width='845px' data-bg="../assets/images/background/item_index-2__1.png")
 							.content.ta-c
 								.block-title.mx-at(max-width="600px")
 									h2 GIÁ TRỊ DỰ ÁN
 								.sub-title
-									h3 West Lakes Golf & Villas
+									h3 West Lakes Golf & Villass
 									p Quần thể biệt thự nghỉ dưỡng ven đô,
 										br
 										| ôm trọn sân Golf đầu tiên ở phía Tây Thành phố Hồ Chí Minh
@@ -17,7 +17,7 @@ section.index-2(full-screen)
 									p Phát triển dựa trên những quy chuẩn kiến trúc khắt khe của sân Golf West Lakes - một sản phẩm của đơn vị thiết kế Thomson Perrett hàng đầu thế giới, chỉ cách trung tâm Tp.HCM chỉ hơn 30km nhưng quy tụ các tiện ích nội khu 5 sao đáp ứng nhu cầu nghỉ dưỡng xanh cao cấp của gia đình hiện đại.
 				.swiper-slide
 					.section(data-bg="../assets/images/background/index-2.2.png")
-						.block-content.ml-at(max-width='50%' border-right bg-style="2")
+						.block-content.ml-at(max-width='50%' border-right data-bg="../assets/images/background/item_index-2__1.png")
 							.content.ta-c(left="40%" width="60%")
 								.block-title
 									h2(font-size="40px" no-after) Cộng đồng tinh hoa 
@@ -27,7 +27,7 @@ section.index-2(full-screen)
 									p.line-height--30px Không nằm giữa trung tâm đô thị phồn hoa dự án được quy hoạch và thiết kế dành riêng cho cộng đồng dân cư thông thái yêu thích nơi sống cách biệt chốn thị thành náo nhiệt và những tiêu chuẩn sống giành riêng cho giới trí thức West Lakes Gofl & Villas được kiến tạo để đáp ứng mọi nhu cầu khắt khe của một nơi an cư xứng đáng với vị thế vượt tầm của chủ nhân thành đạt. Mỗi biệt thự thiết kế tinh tế đến từng chi tiết chính là tuyên ngôn mạnh về phong cách sống ở tầm cao khác biệt tương ứng, xứng đáng với giá trị đầu tư.
 				.swiper-slide
 					.section(data-bg="../assets/images/background/index-2.3.png")
-						.block-content.ml-at(max-width='50%' border-right bg-style="2")
+						.block-content.ml-at(max-width='50%' border-right data-bg="../assets/images/background/item_index-2__3.png")
 							.content.ta-c(left="40%" width="60%")
 								.block-title
 									h2(font-size="40px" no-after) Kiến trúc độc bản
@@ -37,7 +37,7 @@ section.index-2(full-screen)
 									p Kiến trúc độc bản - cảnh quan hoàn mỹ: Phía sau vẻ hào nhoáng của dãy biệt thự đẳng cấp là hàng trăm hecta thảm cỏ sân Golf xanh mướt chiếm trọn mọi tầm nhìn. Sự kế hợp hoàn hảo giữa vẻ đẹp kiến trúc và cảnh quan hoàn mỹ của West Lakes Golf & Villas sẽ là tuyệt phẩm dành riêng cho những chủ sở hữu xứng tầm.
 				.swiper-slide
 					.section(data-bg="../assets/images/background/index-2.4.png")
-						.block-content(max-width='50%' border-left bg-style="3")
+						.block-content(max-width='50%' border-left data-bg="../assets/images/background/item_index-2__4.png")
 							.content.ta-c(left="40%" width="60%")
 								.block-title
 									h2(font-size="40px" no-after) Tiềm năng đầu tư
@@ -45,7 +45,7 @@ section.index-2(full-screen)
 										| sinh lời vượt trội
 								.desc
 									p Nằm cạnh quần thể Golf đẳng cấp nhất miền Nam và hưởng lợi từ tiềm năng phát triển của khu vực liền kề phía Tây Sài Gòn West Lakes Golf & Villas đảm bảo đem lại dòng tiền ổn định từ tiềm năng khai thác cho thuê, nhà đầu tư có thể hoàn toàn yên tâm về khả năng thu hồi vốn nhanh chóng đặc biệt khi dự án đang nằm giữa vùng tâm điểm thu hút nhiều đầu tư bất động sản liền kề phía Tây Sài Gòn.
-		.list-btn
+		.list-btn-slider(has-pause)
 			.item.swiper-button-prev
 			.item.swiper-button-pause
 			.item.swiper-button-next
