--- a/src/scss/pages/index/i-2.scss
+++ b/src/scss/pages/index/i-2.scss
@@ -4,169 +4,50 @@
 	.slider-main-index__2 {
 		position: relative;
 
-		.list-btn {
-			position: absolute;
-			display: flex;
-			flex-wrap: wrap;
-			width: 122px;
-			height: 40px;
+		.list-btn-slider {
 			bottom: 70px;
 			right: 140px;
-			background: rgba(112, 139, 78, 0.38);
-			z-index: 10;
-			border-radius: 10px;
-			overflow: hidden;
-
-			.item {
-				-ms-flex: 0 0 33.3333%;
-				flex: 0 0 33.3333%;
-				max-width: 33.3333%;
-				background: #DCC375;
-			}
 		}
-
-		.swiper-button-pause {
-			cursor: pointer;
-			position: relative;
-
-			&::after {
-				content: '';
-				position: absolute;
-				background-image: url(../assets/icons/pause.svg);
-				background-size: cover;
-				left: 50%;
-				top: 50%;
-				width: 15px;
-				height: 17px;
-				transform: translate(-50%, -50%);
-			}
-		}
-
-		.swiper-button-prev,
-		.swiper-button-next {
-			position: static;
-			height: 100%;
-			margin-top: 0;
-			color: #ffffff;
-
-			&:after {
-				font-size: 18px;
-			}
-		}
-	}
-
-	.section {
-		background-size: cover;
-		background-position: center;
-		width: 100%;
-		height: 100%;
 	}
 
 	.block-content {
 		position: relative;
-		height: 100%;
-		width: 100%;
 
-		&[border-right],
-		&[border-left] {
-			border-image: linear-gradient(to bottom, #E4C777, #BA8C3C) 1 100%;
-		}
+		@media (min-width: 1025px) {
 
-		&[border-right] {
-			border-width: 10px;
-			border-right: solid;
-		}
-
-		&[border-left] {
-			border-width: 10px;
-			border-left: solid;
-		}
-
-		&[bg-style="1"] {
-
-			&::after,
-			&::before {
-				content: '';
-				position: absolute;
-				left: 0;
-				width: 100%;
-				height: 70%;
+			&[border-right],
+			&[border-left] {
+				border-image: linear-gradient(to bottom, #E4C777, #BA8C3C) 1 100%;
 			}
 
-			&::after {
-				top: 0;
-				background: linear-gradient(180deg, #054B37, #22643900);
+			&[border-right] {
+				border-width: 10px;
+				border-right: solid;
 			}
 
-			&::before {
-				bottom: 0;
-				background: linear-gradient(180deg, #22643900, #054B37);
-			}
-		}
-
-		&[bg-style="2"] {
-
-			&::after,
-			&::before {
-				content: '';
-				position: absolute;
-				left: 0;
-				top: 0;
-				width: 100%;
-				height: 100%;
-			}
-
-			&::after {
-				background: rgba(4, 54, 40, 1);
-				opacity: .18;
-				z-index: 1;
-			}
-
-			&::before {
-				background: linear-gradient(90deg, rgba(4, 54, 40, 0.9), #194b2a00);
-				z-index: 2;
-			}
-		}
-
-		&[bg-style="3"] {
-
-			&::after,
-			&::before {
-				content: '';
-				position: absolute;
-				left: 0;
-				top: 0;
-				width: 100%;
-				height: 100%;
-			}
-
-			&::after {
-				background: rgba(4, 54, 40, 1);
-				opacity: .18;
-				z-index: 1;
-			}
-
-			&::before {
-				background: linear-gradient(90deg, #194b2a00, rgba(4, 54, 40, 0.9));
-				z-index: 2;
+			&[border-left] {
+				border-width: 10px;
+				border-left: solid;
 			}
 		}
 	}
 
-	.content {
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		width: 90%;
-		transform: translate(-50%, -50%);
-		z-index: 3;
+	@media (min-width: 1025px) {
+		.content {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			width: 90%;
+			transform: translate(-50%, -50%);
+			z-index: 3;
 
-		&[left="40%"] {
-			left: 40%;
-		}
+			&[left="40%"] {
+				left: 40%;
+			}
 
-		&[width="60%"] {
-			width: 60%;
+			&[width="60%"] {
+				width: 60%;
+			}
 		}
 	}
 
@@ -181,11 +62,11 @@
 		}
 
 		h3 {
-			font-size: 2.8125rem;
+			font-size: 45px;
 		}
 
 		p {
-			font-size: 1.25rem;
+			font-size: 20px;
 		}
 
 		&:after {
@@ -205,11 +86,85 @@
 
 		p {
 			color: #ffffff;
-			font-size: 1.25rem;
+			font-size: 20px;
 		}
 
 		p+p {
 			margin-top: 15px;
+		}
+	}
+
+	@media (max-width: 1024.98px) {
+		height: auto;
+
+		.slider-main-index__2 {
+			position: relative;
+
+			.list-btn-slider {
+				bottom: 15px;
+				right: 15px;
+			}
+		}
+
+		.block-title {
+			max-width: 50%;
+			margin: 0 auto;
+		}
+
+		.section {
+			background-size: cover;
+		}
+
+		.block-content {
+			background-size: cover;
+			padding: 100px 0;
+			max-width: 100%;
+		}
+
+		.sub-title {
+			margin-top: 10px;
+			padding-bottom: 15px;
+			max-width: 80%;
+			margin: 0 auto;
+
+			h3 {
+				font-size: 24px;
+			}
+
+			p {
+				font-size: 18px;
+			}
+		}
+
+		.desc {
+			max-width: 80%;
+			margin: 0 auto;
+			margin-top: 25px;
+
+			p {
+				font-size: 16px;
+			}
+
+			p+p {
+				margin-top: 10px;
+			}
+		}
+	}
+
+	@media (max-width: 575.98px) {
+
+		.block-title {
+			max-width: 80%;
+		}
+
+		.block-content {
+			padding: 25px 0 75px;
+		}
+
+		.desc {
+			p {
+				font-size: 14px;
+			}
 		}
 	}
 }
