--- a/src/scss/pages/index/i-3.scss
+++ b/src/scss/pages/index/i-3.scss
@@ -1,7 +1,6 @@
 .index-3 {
 	position: relative;
 	width: 100%;
-	height: 100%;
 	background-position: center;
 	background-size: cover;
 
@@ -9,7 +8,7 @@
 		display: flex;
 		align-items: center;
 		position: relative;
-		min-height: 1055px;
+		min-height: 100vh;
 
 		.block-title {
 			margin-bottom: 80px;
@@ -28,7 +27,7 @@
 				font-size: 1.25rem;
 			}
 
-			p+p {
+			p + p {
 				margin-top: 10px;
 			}
 		}
@@ -37,7 +36,27 @@
 			position: absolute;
 			right: 0;
 			top: 50%;
+			width: 50%;
 			transform: translateY(-50%);
+			svg {
+				width: 100%;
+				overflow: visible;
+				.circle-1 {
+					fill: #306132;
+				}
+				.circle-1-animate {
+					animation: Stroke1 linear infinite 2s 1s;
+				}
+				.circle-2 {
+					fill: #224e28;
+				}
+				.circle-2-animate {
+					animation: Stroke2 linear infinite 2s;
+				}
+				.circle-3 {
+					fill: #1f532d;
+				}
+			}
 		}
 	}
 
@@ -81,7 +100,7 @@
 			left: 0;
 			background: linear-gradient(90deg, rgba(4, 54, 40, 0.9), #194b2a00);
 			z-index: 1;
-			opacity: .13;
+			opacity: 0.13;
 		}
 
 		.list-items-icon {
@@ -94,7 +113,7 @@
 				padding-bottom: 5px;
 			}
 
-			.item+.item {
+			.item + .item {
 				margin-left: 130px;
 			}
 
