--- a/src/_templates/index/i-3.pug
+++ b/src/_templates/index/i-3.pug
@@ -11,7 +11,7 @@ section.index-3(data-bg="../assets/images/background/index-3.png")
 							| Động lực sinh lời vượt trội
 						p Tọa lạc ngay mặt tiền Tỉnh lộ 822 thuộc huyện Đức Hòa, tỉnh Long An, West Lakes Golf & Villas là Đô thị sân Golf đầu tiên sở hữu vị trí hội tụ đầy đủ mọi yếu tố “nội lực” cần thiết giúp thúc đẩy sự sinh lời nhanh chóng.
 		.img-map
-			img.lazyload.blur-up(data-src="./assets/images/items/map.png", alt="MAP")
+			img.lazyload.blur-up.ofcv(data-src="./assets/images/items/map.png", alt="MAP")
 	.block-2
 		.container
 			.block-content.mx-at(max-width="1280px")
