--- a/src/scss/pages/index/i-3.scss
+++ b/src/scss/pages/index/i-3.scss
@@ -1,9 +1,5 @@
 .index-3 {
 	position: relative;
-	width: 100%;
-	height: 100%;
-	background-position: center;
-	background-size: cover;
 
 	.block-1 {
 		display: flex;
@@ -18,14 +14,14 @@
 		.desc {
 			h3 {
 				color: map-get($mau, main-1);
-				font-size: 2.5rem;
+				font-size: 60px;
 				text-transform: uppercase;
 				margin-bottom: 25px;
 			}
 
 			p {
 				color: #ffffff;
-				font-size: 1.25rem;
+				font-size: 20px;
 			}
 
 			p+p {
@@ -33,11 +29,13 @@
 			}
 		}
 
-		.img-map {
-			position: absolute;
-			right: 0;
-			top: 50%;
-			transform: translateY(-50%);
+		@media (min-width: 1025px) {
+			.img-map {
+				position: absolute;
+				right: 0;
+				top: 50%;
+				transform: translateY(-50%);
+			}
 		}
 	}
 
@@ -116,6 +114,82 @@
 			p {
 				font-size: 1.25rem;
 				color: #ffffff;
+			}
+		}
+	}
+
+	@media (max-width: 1439.98px) {
+		.block-1 {
+			min-height: auto;
+			padding: 200px 0;
+
+			.block-title {
+				margin-bottom: 50px;
+
+				h2 {
+					font-size: 48px;
+				}
+			}
+
+			.desc {
+				h3 {
+					font-size: 28px;
+				}
+
+				p {
+					font-size: 18px;
+				}
+			}
+
+			.img-map {
+				text-align: right;
+
+				img {
+					width: 80%;
+				}
+			}
+		}
+	}
+
+	@media (max-width: 1199.98px) {
+		.block-1 {
+			.block-content {
+				max-width: 50%;
+			}
+
+			.img-map {
+				img {
+					width: 60%;
+				}
+			}
+		}
+	}
+
+	@media (max-width: 1024.98px) {
+		.block-1 {
+			.desc {
+				h3 {
+					color: map-get($mau, main-1);
+					font-size: 60px;
+					text-transform: uppercase;
+					margin-bottom: 25px;
+				}
+
+				p {
+					color: #ffffff;
+					font-size: 20px;
+				}
+
+				p+p {
+					margin-top: 10px;
+				}
+			}
+
+			.img-map {
+				position: static;
+				right: 0;
+				top: 50%;
+				transform: translateY(-50%);
 			}
 		}
 	}
